# AtlasWorkspace_NovaForge

./: .gitignore  CMakeLists.txt  CMakePresets.json  Directory.Build.props  Dockerfile  Makefile  My Repos.rtf  README.md  build.cmd  game_patch.diff  vcpkg.json
.github/workflows/: atlasui_validation.yml  ci.yml
Additions/atlas_workspace_novaforge_rollup_pack/: repo_tree_depth3.txt
Additions/atlasui_widget_kit_starter_patch/Source/UI/: CMakeLists.txt
Additions/atlasui_widget_kit_starter_patch/Source/UI/include/NF/UI/AtlasUI/: AtlasUI.h  Contexts.h  DrawPrimitives.h  Interfaces.h  PanelBase.h  PanelHost.h  SimplePanel.h  Theme.h  WidgetBase.h  WidgetHelpers.h
Additions/atlasui_widget_kit_starter_patch/Source/UI/include/NF/UI/AtlasUI/Widgets/: Button.h  Container.h  Label.h  Splitter.h  StackPanel.h  Tabs.h
Additions/atlasui_widget_kit_starter_patch/Source/UI/src/AtlasUI/: AtlasUI.cpp  PanelHost.cpp
Additions/atlasui_widget_kit_starter_patch/Source/UI/src/AtlasUI/Widgets/: Splitter.cpp  StackPanel.cpp  Tabs.cpp
Additions/command_shortcut_system_v1_starter_pack/: README.md
AtlasAI/: ATLAS_AI_OVERVIEW.md  README.md
Config/: novaforge.project.json  season.config.json
Docs/: ATLASFORGE_AUDIT_REPORT.md  CONSOLIDATION_PLAN.md  GITHUB_COPILOT_IMPLEMENTATION_DIRECTIONS.md  roadmap.md
Docs/Game/: ROADMAP.md  (+5 more)
Logs/: logger.format.md
Project/: NovaForge.atlas.json  project.atlas.json
Schemas/: centrifuge.schema.json  interaction.schema.json  material.schema.json  mission.schema.json  module.schema.json  power.schema.json  recipe.schema.json  rig.schema.json  ship.schema.json  skill.schema.json
Scripts/: build.sh  build_all.sh  build_win.cmd  generate_vs_solution.bat  generate_vs_solution.ps1  validate_project.sh
Source/Editor/: CMakeLists.txt
Source/Editor/include/NF/Editor/: Editor.h
Source/Editor/src/: Editor.cpp
Source/Pipeline/: CMakeLists.txt
Source/Pipeline/include/NF/Pipeline/: Pipeline.h
Source/Pipeline/src/: ArbiterReasoner.cpp  BlenderBridge.cpp  Pipeline.cpp  ToolWiring.cpp  WorkspaceBroker.cpp
Source/Programs/: CMakeLists.txt
Source/Programs/NovaForgeEditor/: main.cpp
Source/Programs/NovaForgeGame/: main.cpp
Source/Programs/NovaForgeServer/: main.cpp
Source/UI/: CMakeLists.txt
Source/UI/include/NF/UI/: GDIBackend.h  GLFWInputAdapter.h  GLFWWindowProvider.h  ImGuiBackend.h  ImGuiLayer.h  OpenGLBackend.h  UI.h  UIBackend.h  UIWidgets.h
Source/UI/include/NF/UI/AtlasUI/: AtlasUI.h  Contexts.h  DrawPrimitives.h  GDIRenderBackend.h  Interfaces.h  PanelBase.h  PanelHost.h  SimplePanel.h  Types.h  WidgetBase.h  WidgetHelpers.h  WidgetTheme.h
Source/UI/include/NF/UI/AtlasUI/Commands/: CommandDefaults.h  CommandHelpers.h  CommandManager.h  CommandRegistry.h  CommandTypes.h  ShortcutRouter.h
Source/UI/include/NF/UI/AtlasUI/Panels/: ConsolePanel.h  ContentBrowserPanel.h  GraphEditorPanel.h  HierarchyPanel.h  IDEPanel.h  InspectorPanel.h  PipelineMonitorPanel.h  ProjectPickerPanel.h  ViewportPanel.h
Source/UI/include/NF/UI/AtlasUI/Services/: FocusService.h  NotificationHost.h  PopupHost.h  TooltipService.h
Source/UI/include/NF/UI/AtlasUI/Theme/: Theme.h  ThemeDefaults.h  ThemeManager.h  ThemeTokens.h  ThemeTypes.h
Source/UI/include/NF/UI/AtlasUI/Widgets/: Button.h  Container.h  Dropdown.h  Label.h  NotificationCard.h  Panel.h  PropertyRow.h  Splitter.h  StackPanel.h  TabBar.h  Tabs.h  TextInput.h  Toolbar.h  Tooltip.h  WidgetKit.h
Source/UI/src/: UI.cpp
Source/UI/src/AtlasUI/: AtlasUI.cpp  PanelHost.cpp
Source/UI/src/AtlasUI/Commands/: CommandDefaults.cpp  CommandManager.cpp  CommandRegistry.cpp  CommandTypes.cpp  ShortcutRouter.cpp
Source/UI/src/AtlasUI/Panels/: ConsolePanel.cpp  ContentBrowserPanel.cpp  GraphEditorPanel.cpp  HierarchyPanel.cpp  IDEPanel.cpp  InspectorPanel.cpp  PipelineMonitorPanel.cpp  ProjectPickerPanel.cpp  ViewportPanel.cpp
Source/UI/src/AtlasUI/Services/: FocusService.cpp  NotificationHost.cpp  PopupHost.cpp  TooltipService.cpp
Source/UI/src/AtlasUI/Theme/: ThemeDefaults.cpp  ThemeManager.cpp
Source/UI/src/AtlasUI/Widgets/: Button.cpp  Dropdown.cpp  NotificationCard.cpp  Panel.cpp  PropertyRow.cpp  Splitter.cpp  StackPanel.cpp  TabBar.cpp  Tabs.cpp  TextInput.cpp  Toolbar.cpp  Tooltip.cpp
Tests/: CMakeLists.txt  catch_main.cpp
Tests/AI/: test_ai.cpp
Tests/Animation/: test_animation.cpp  test_s5_animation.cpp
Tests/Audio/: test_audio.cpp
Tests/Core/: test_core.cpp
Tests/Editor/: test_editor.cpp  test_m1c_editor.cpp  test_m1d_editor.cpp  test_m2_editor.cpp  test_m3_editor.cpp  test_m4_editor.cpp  test_s10_editor.cpp  test_s11_editor.cpp  test_s12_editor.cpp  test_s13_editor.cpp  test_s14_editor.cpp  test_s15_editor.cpp  test_s16_editor.cpp  test_s17_editor.cpp  test_s18_editor.cpp  test_s19_editor.cpp  test_s20_editor.cpp  test_s21_editor.cpp  test_s22_editor.cpp  test_s23_editor.cpp  test_s24_editor.cpp  test_s25_editor.cpp  test_s26_editor.cpp  test_s27_editor.cpp  test_s28_editor.cpp  test_s29_editor.cpp  test_s30_editor.cpp  test_s31_editor.cpp  test_s32_editor.cpp  test_s33_editor.cpp  test_s34_editor.cpp  test_s35_editor.cpp  test_s36_editor.cpp  test_s37_editor.cpp  test_s38_editor.cpp  test_s39_editor.cpp  test_s40_editor.cpp  test_s41_editor.cpp  test_s42_editor.cpp  test_s43_editor.cpp  (+12 more)
Tests/Engine/: test_engine.cpp
Tests/Game/: test_game.cpp
Tests/GraphVM/: test_graphvm.cpp
Tests/Input/: test_input.cpp
Tests/Networking/: test_networking.cpp
Tests/Physics/: test_physics.cpp
Tests/Pipeline/: test_arbiter_reasoner.cpp  test_blender_bridge.cpp  test_full_suite.cpp  test_pipeline.cpp  test_tool_wiring.cpp  test_workspace_broker.cpp
Tests/Renderer/: test_renderer.cpp
Tests/UI/: test_atlasui.cpp  test_m1_editor.cpp  test_ui.cpp
build_ci/: .ninja_deps  .ninja_log  DartConfiguration.tcl  build.ninja
build_local/: DartConfiguration.tcl  Makefile
build_test/: .ninja_deps  .ninja_log  DartConfiguration.tcl  Makefile  build.ninja
build_test_debug/: .ninja_deps  .ninja_log  DartConfiguration.tcl  build.ninja
cmake/: CompilerSettings.cmake  WindowsToolchain.cmake
(+288 files in other folders)
